2010-04-07 michaudm <michael.michaud@free.fr>
    improved ExplodeSelectedFeatures performance avoiding to clone many
    coordinates uselessly (where many means, for each GeometryCollection, total
    number of coord x number of single geometries)

2010-04-03 michaudm <michael.michaud@free.fr>
    add InvertSelectionPlugIn
    add Larry's SelectAllModifiedFeaturesPlugIn in the default-plugin.xml

2010-03-21 michaudm <michael.michaud@free.fr>
    SimpleQueryPlugIn : added geometric op for strict inclusion ("TFFTFF***")
    and fixed a bug in buffer function

2010-03-21 michaudm <michael.michaud@free.fr>
    org.geotools.shapefile.PolygonHandler
    Keep invalid linear rings in userData so that they can be retrieved
    Add a BeanTool to retrieve invalid shapefile rings

2010-03-15 beckerl <becker.larry@gmail.com>
    org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry
    Fixed so that it works with GeometryCollection

2010-03-13 michaudm <michael.michaud@free.fr>
    Geometry Function Polygonize now returns Polygon or MultiPolygon
    instead of GeometryCollection

2010-03-13 michaudm <michael.michaud@free.fr>
    Fix a bug in com.vividsolutions.jump.workbench.ui.EditTransaction
    Point(null,null,0) in deleteFeature method throwed exception with JTS-1.11
    replaced by an empty GeometryCollection

2010-03-04 sstein  <sstein@geo.uzh.ch>
	added Sextante Raster interface classes, so we can process rasters now in OJ
	
2010-03-04 sstein  <sstein@geo.uzh.ch>
	added JTS 1.11
	changed Maven pom script
	
2010-02-12 beckerl <becker.larry@gmail.com>
	Scalebar can now be modified with BeanShellScripts since getters/setters have been added.
	jump.workbench.ui.plugin.scalebar.ScaleBarRenderer
	
2010-02-12 beckerl <becker.larry@gmail.com>
	Added optimization to stop drawing while loading layers.  
	This significantly speeds up loading of large tasks. 
	core.ui.plugin.file.open.OpenProjectWizard
	
2010-02-04 beckerl <becker.larry@gmail.com>